--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -1,5 +1,11 @@
 @use 'helpers' as *;
 
+html {
+  &.is-lock {
+    overflow: hidden;
+  }
+}
+
 body {
   @include fluid-text(18, 14);
 
@@ -103,4 +109,19 @@ a {
   outline: rem(2) dashed var(--color-light);
   outline-offset: rem(4);
   transition-duration: 0 !important;
+}
+
+//Увеличиваем область нажатия мелким елементам если у них есть [aria-label]
+a,
+button {
+  &[aria-label] {
+    position: relative;
+
+    &::before {
+      @include abs-center;
+      @include square(rem(44));
+
+      content: '';
+    }
+  }
 }
