--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -15,6 +15,8 @@
   --color-accent: #ffd119;
   --color-red: #ff5500;
 
+  --border: #{rem(1)} solid var(--color-dark-15);
+
   --font-family-base: 'Inter', sans-serif;
   --font-family-accent: 'Kumbh Sans', sans-serif;
 
@@ -22,7 +24,7 @@
   --container-padding-x: #{rem(16)};
 
   --transition-duration: 0.2s;
-  
+
   @include laptop {
     --container-width: #{rem(1280)};
   }
