--- a/styles/blocks/_metrics.scss
+++ b/styles/blocks/_metrics.scss
@@ -4,13 +4,25 @@
   &__list {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    align-items: flex-start;
   }
 
   &__item {
     display: flex;
     flex-direction: column-reverse;
+    align-content: start;
     row-gap: rem(10);
     padding: rem(50);
+
+    @include laptop {
+      padding: rem(30) rem(40);
+      row-gap: rem(2);
+    }
+
+    @include tablet {
+      padding: rem(20);
+      row-gap: 0;
+    }
 
     &:first-child {
       padding-left: 0;
