--- a/styles/blocks/_resources-preview.scss
+++ b/styles/blocks/_resources-preview.scss
@@ -3,12 +3,30 @@
 .resources-preview {
   display: flex;
   flex-direction: column;
-  row-gap: rem(30);
   justify-content: end;
   align-items: flex-start;
+  row-gap: rem(30);
+
+  @include laptop {
+    row-gap: rem(20);
+  }
+
+  @include tablet {
+    border-top: var(--border);
+  }
 
   &__body {
     display: grid;
     row-gap: rem(14);
+
+    @include laptop {
+      row-gap: rem(6);
+    }
+  }
+
+  &__button {
+    @include mobile-s {
+      width: 100%;
+    }
   }
 }
