--- a/styles/main.scss
+++ b/styles/main.scss
@@ -19,7 +19,7 @@
 @use 'blocks/advantage-card';
 @use 'blocks/hero';
 
-.header,
-.footer {
-  display: none !important;
-}
+// .header,
+// .footer {
+//   display: none !important;
+// }
