--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -7,6 +7,8 @@
 
   --color-dark-10: #1a1a1a;
   --color-dark-15: #262626;
+  --color-dark-20: #333333;
+
   --color-dark-40: #666666;
 
   --color-gray-50: #7e7e81;
